Auto-format code
There are some small bug fixes included as well.